<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/title_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/input_group_login"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/madness_8_bit"
            android:text="@string/collector"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/sub_title_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/madness_8_bit"
            android:text="@string/game_collection_manager"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/username_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:fontFamily="@font/madness_8_bit"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom"
            android:fontFamily="@font/madness_8_bit"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="20sp" />


        <Button
            android:id="@+id/sign_in_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/madness_8_bit"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="#FE5295"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/sign_in_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/madness_8_bit"
            android:padding="10dp"
            android:text="@string/missing_account_message"
            android:textAllCaps="true"
            android:textColor="#FAD0E1"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>