<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_page_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/game_page_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/game_page_information"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/game_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/madness_8_bit"
            android:text="@string/collector"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/game_page_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/madness_8_bit"
            android:text="@string/_01_01_2020"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_page_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/game_page_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_page_description_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/madness_8_bit"
                android:importantForAutofill="no"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:text="@string/description"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/game_page_description_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/madness_8_bit"
                android:text="@string/Lorem_Ipsum"
                android:importantForAutofill="no"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/game_page_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:fontFamily="@font/madness_8_bit"
            android:text="@string/genre"
            android:importantForAutofill="no"
            android:padding="15dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/game_page_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom"
            android:fontFamily="@font/madness_8_bit"
            android:text="@string/rating"
            android:importantForAutofill="no"
            android:padding="15dp"
            android:textSize="20sp" />


    </LinearLayout>

</RelativeLayout>