<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <LinearLayout
        android:id="@+id/title_layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/input_group_register"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/madness_8_bit"
            android:text="@string/collector"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/sub_title_text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/madness_8_bit"
            android:text="@string/game_collection_manager"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_input_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_single"
            android:fontFamily="@font/madness_8_bit"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/sign_up_button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/madness_8_bit"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/invite_friend"
            android:textAllCaps="true"
            android:textColor="#FE5295"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/login_in_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/madness_8_bit"
            android:padding="10dp"
            android:text="@string/already_have_an_account_sign_in"
            android:textAllCaps="true"
            android:textColor="#FAD0E1"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>